# extract-contextualize

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: deploy.yml
infra/: backend.tf  main.tf  outputs.tf  provider.tf  providers.tf  variables.tf
src/: __init__.py  app.py  extractor.py  models.py  ner_model.py  pdf_parser.py  utils.py
tests/: test_app.py  test_extractor.py  test_pdf_parser.py
