[tool.poetry]
name = "extract-contextualize"
version = "0.1.0"
description = "A software solution that automatically extracts and contextualizes entities from provided scientific paper PDFs. Data should be processed and returned via an API endpoint."
authors = ["Moustafa <mosafehashf@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
pdfplumber = "^0.11.4"
transformers = "^4.47.1"
torch = "^2.5.1"
python-multipart = "^0.0.20"
joblib = "^1.4.2"
loguru = "^0.7.3"
google-cloud-aiplatform = "^1.75.0"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
httpx = "^0.28.1"
pytest-asyncio = "^0.25.0"
pytest = "^8.3.4"
commitizen = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
